--- a/package.json
+++ b/package.json
@@ -20,14 +20,21 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "jest",
-    "lint": "./node_modules/.bin/eslint *.js **/*.js"
+    "lint": "./node_modules/.bin/eslint *.js **/*.js",
+    "devtools": "react-devtools"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-devtools": "^3.2.3",
+    "react-native": "0.55.2",
+    "react-navigation": "^2.5.5",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1"
   }
 }
