--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
     "react-native/no-unused-styles": 2,
     "react-native/split-platform-components": 2,
     "react-native/no-inline-styles": 2,
-    "react-native/no-color-literals": 0
+    "react-native/no-color-literals": 0,
+    "react/prop-types": ["error", { "ignore": ["navigation"] }]
   }
 }
