--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^27.0.1",
-    "react": "16.3.1",
+    "react": "^16.3.1",
     "react-devtools": "^3.2.3",
     "react-native": "0.55.2",
+    "react-native-maps": "^0.21.0",
     "react-navigation": "^2.5.5",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
