--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "react": "^16.3.1",
     "react-devtools": "^3.2.3",
     "react-native": "0.55.2",
+    "react-native-exit-app": "^1.0.0",
     "react-native-maps": "^0.21.0",
     "react-navigation": "^2.5.5",
+    "react-navigation-redux-helpers": "^2.0.2",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1"
   }
