--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "libphonenumber-js": "^1.2.20",
     "react": "^16.3.1",
     "react-devtools": "^3.2.3",
     "react-native": "0.55.2",
