--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
+  "name": "explorer-app",
+  "displayName": "explorer-app",
   "expo": {
-    "sdkVersion": "27.0.0"
+    "sdkVersion": "28.0.0"
   }
 }
