--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-reanimated')
     compile project(':react-native-maps')
     compile project(':react-native-exit-app')
     compile fileTree(dir: "libs", include: ["*.jar"])
