Navigation Updates, Contact List, Loading Overlay, Validation, and MORE!
- Created bottom tabbed navigation for app's main flow
- Created signup navigator for signup flow
- Refactored the RootNavigator to accomidate new sub-navigators
- Created stack navigators for each item under tab navigator
- Renamed "Home" screen to "Welcome" screen
- Modified CustomButton to accept style & textStyle props.
- Built ContactList component & Contacts screen
- Integrated Contacts screen with "Expo.Contacts" API.
- Created "LoadingOverlay" component & integrated it into signup flow screens
- Setup 'dummy' ContactDetails screen (to be replaced by Meenu's code)
- Added form validation on all signup pages
- Enabling & Disabling continue buttons on signup pages while form in invalid
- Auto focus next field on 'Phone Number Validation' page
- Some code cleanup
- Some eslint config updates & fixes
- Temporarily not persisting navigation data (to help with development)

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,13 +6,15 @@
     "jest/globals": true
   },
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2018,
     "ecmaFeatures": {
         "experimentalObjectRestSpread": true,
+        "impliedStrict": true,
         "jsx": true
     },
     "sourceType": "module"
   },
+  "parser": "babel-eslint",
   "plugins": [
     "react",
     "react-native",
@@ -32,19 +34,17 @@
       "error",
       "unix"
     ],
+    "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "varsIgnorePattern": "React"}],
     "quotes": [
       "error",
       "single"
-    ],
-    "semi": [
-      "error",
-      "always"
     ],
     "react/jsx-uses-vars": "warn",
     "react-native/no-unused-styles": 2,
     "react-native/split-platform-components": 2,
     "react-native/no-inline-styles": 2,
     "react-native/no-color-literals": 0,
-    "react/prop-types": ["error", { "ignore": ["children", "dispatch", "navigation"] }]
+    "react/prop-types": ["warn", { "ignore": ["children", "dispatch", "navigation"] }],
+    "react/display-name": [0]
   }
 }
