--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react": "^16.3.1",
     "react-devtools": "^3.2.3",
     "react-native": "0.55.2",
+    "react-native-contacts": "^2.2.2",
     "react-native-exit-app": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-maps": "^0.21.0",
     "react-native-reanimated": "1.0.0-alpha.5",
     "react-navigation": "^2.5.5",
