--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "react-native": "0.55.2",
     "react-native-exit-app": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
-    "react-native-linear-gradient": "^2.4.0",
     "react-native-maps": "^0.21.0",
     "react-native-reanimated": "1.0.0-alpha.5",
     "react-navigation": "^2.5.5",
@@ -44,12 +43,14 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1"
   },
   "rnpm": {
     "assets": [
-      "./src/app/assets/fonts"
+      "./src/app/assets/fonts",
+      "./src/app/assets/images"
     ]
   }
 }
