--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "jest-expo": "~27.0.0",
     "npm": "^6.1.0",
     "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "sharkhorse": "^4.0.0",
+    "uuid": "^3.3.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
