--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "libphonenumber-js": "^1.2.20",
     "react": "^16.3.1",
     "react-devtools": "^3.2.3",
+    "react-mixin": "^2.0.2",
     "react-native": "0.55.2",
     "react-native-exit-app": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
@@ -44,6 +45,7 @@
     "react-navigation": "^2.5.5",
     "react-navigation-redux-helpers": "^2.0.2",
     "react-redux": "^5.0.7",
+    "react-timer-mixin": "^0.13.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
