--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "install": "^0.11.0",
     "jest-expo": "~27.0.0",
     "npm": "^6.1.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1",
     "sharkhorse": "^4.0.0",
