fixed issues with enironment variables not overriding, and implemented auth token check & refresh

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": ["react-native", "react-native-dotenv"],
-  "plugins": [
-    [
-      "transform-inline-environment-variables",
-      {"include": ["NODE_ENV", "APP_ENVIRONMENT"]}
-    ]
-  ]
+  "presets": ["react-native", "react-native-dotenv"]
 }
