--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^4.19.1",
     "eslint-plugin-jest": "^21.17.0",
@@ -23,9 +24,9 @@
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
-    "android-debug": "APP_ENVIRONMENT=debug npm run android",
+    "android-debug": "REACT_NATIVE_EXPLORER_DEBUG=1 npm run android",
     "ios": "react-native-scripts ios",
-    "ios-debug": "APP_ENVIRONMENT=debug npm run ios",
+    "ios-debug": "REACT_NATIVE_EXPLORER_DEBUG=1 npm run ios",
     "test": "jest",
     "lint": "./node_modules/.bin/eslint *.js **/*.js",
     "devtools": "react-devtools",
@@ -42,6 +43,7 @@
     "react-devtools": "^3.2.3",
     "react-mixin": "^2.0.2",
     "react-native": "0.55.2",
+    "react-native-config": "^0.11.5",
     "react-native-exit-app": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-maps": "^0.21.0",
