--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1",
     "sharkhorse": "^4.0.0",
+    "socket.io-client": "^2.1.1",
     "uuid": "^3.3.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
